@@ -10,6 +10,7 @@ version 1.8.5, in progress
 - Function parameter [min:max:default] values: fix bug
   for locales using ',' as decimal separator
 - Fix bugs 2843717, 2848633
+- Add --to-file and --from-file options to "set" command
   
 8/28/2009 version 1.8.4
 - Fix breakage in GUI interface for calling user-defined
